# srt_tango_2

./: .gitignore  CMakeLists.txt  README.md  client.cpp  prepare_srt.sh  receiver.cpp  statshandler.h
cppSRTWrapper/: SRTNet.cpp  SRTNet.h
restapi/: RESTInterface.cpp  RESTInterface.hpp
